--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a
             target="_blank"
             class="nav-link active"
-            href="#"
+            href="https://validator.nu/?doc=https%3A%2F%2Flane30schmidt.github.io%2Findia-376%2F"
             >Check this page's validation!</a
           >
         </li>
@@ -49,7 +49,7 @@
 <div class="row">
 <div class="col-md-7 offset-sm-3">
 <div class="card">
-  <img class="img-fluid" src="https://media.cnn.com/api/v1/images/stellar/prod/220507220710-07-kentucky-derby-winner.jpg?c=16x9&q=h_270,w_480,c_fill">
+  <img class="img-fluid" src="https://media.cnn.com/api/v1/images/stellar/prod/220507220710-07-kentucky-derby-winner.jpg?c=16x9&q=h_270,w_480,c_fill" alt="super cool horse pic">
 
   <!-- Creating the card with the information for the user to input -->
   <div class="card-body">
