--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
         <label for="no" class="form-label">No</label>
         <input type="radio" class="form-check-input" id="no" name="optradio" value="no"> 
       </div>
+
+      <!-- select option -->
       <select
         id="horseSelect"
         class="form-select"
